gccida/c1/expand_builtin_memset
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2601:51: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_builtin_memset( tree exp, rtx target, machine_mode mode) 
                                                  ^
                                                  enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2604:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2606:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2608:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2616:4: error: expected ';' after expression
rtx memory_rtx; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2616:5: error: use of undeclared identifier 'memory_rtx'
rtx memory_rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2641:1: error: use of undeclared identifier 'memory_rtx'
memory_rtx = get_memory_rtx( elements); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2642:16: error: use of undeclared identifier 'memory_rtx'; did you mean 'copy_rtx'?
set_mem_align( memory_rtx, v11); 
               ^~~~~~~~~~
               copy_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/rtl.h:1246:12: note: 'copy_rtx' declared here
extern rtx copy_rtx                     PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2643:21: error: use of undeclared identifier 'memory_rtx'; did you mean 'copy_rtx'?
v6 = clear_storage( memory_rtx, v18); 
                    ^~~~~~~~~~
                    copy_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/rtl.h:1246:12: note: 'copy_rtx' declared here
extern rtx copy_rtx                     PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/builtins.c:2646:7: error: use of undeclared identifier 'memory_rtx'
rtx = memory_rtx->fld[0].rtx; 
      ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_memset/src/obj/builtins.o] Error 1
